force-app/main/default/objects/Americord_Flow_Settings__mdt/Americord_Flow_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata will hold settings that can be updated without updating code/flow.</description>
    <label>Americord Code/Flow Setting</label>
    <pluralLabel>Americord Code/Flow Settings</pluralLabel>
</CustomObject>