force-app/main/default/objects/Americord_Flow_Settings__mdt/fields/Idle_Opportunity_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Idle_Opportunity_Owner_Id__c</fullName>
    <description>This field will hold the value of the owner id we are going to reassign the opps to.</description>
    <label>Idle Opportunity Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>