force-app/main/default/objects/Americord_Flow_Settings__mdt/fields/Opportunity_Idle_Limit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Idle_Limit__c</fullName>
    <description>This setting will hold the number of days the opportunity can remind idle before reassignment.</description>
    <inlineHelpText>This setting will hold the number of days the opportunity can remind idle before reassignment.</inlineHelpText>
    <label>Opportunity Idle Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>