force-app/main/default/objects/Americord_Flow_Settings__mdt/fields/Opportunity_Stem_Cell_Recordtype_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stem_Cell_Recordtype_Id__c</fullName>
    <description>This will hold the value of the Opportunity stem cell record type id.</description>
    <inlineHelpText>This will hold the value of the Opportunity stem cell record type id.</inlineHelpText>
    <label>Opportunity Stem Cell Recordtype Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>